Updates on main.js file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="hero-body">
           <div class="container">
             <h1 class="title has-text-centered">
-              IMAGE SEARCH APP
+                <i class="fab fas fa-images fa-lg"></i>&nbsp; IMAGE SEARCH APP
             </h1>
             <h2 class="subtitle has-text-centered">
               SIMPLE IMAGE SEARCH APP USING VANILLA JS
@@ -29,13 +29,16 @@
             <div class="field">
               <label class="label is-large">SEARCH FOR IMAGES</label>
               <div class="control has-icons-left has-icons-right">
-                <input class="input is-large" type="email" placeholder="Type your search here...">
+                <input class="input is-large" type="text" id="search" name="search" placeholder="Type your search here...">
                 <span class="icon is-large is-left">
-                  <i class="fas fa-search fa-lg"></i>
+                    <i class="fas fa-search fa-lg"></i>
                 </span>
               </div>
             </div>
-          </div>
+            <div class="row">
+              <button type="submit" class="button is-large is-dark">SEARCH</button>
+            </div>
+          </div> 
         </form>
       </div>
  
