Changes on the main.js file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 </head>
 <body>
+  <style>
+    .images {
+      column-count: 3;    
+    }
+  </style>
+
     <section class="hero is-dark">
         <div class="hero-body">
           <div class="container">
@@ -40,6 +46,13 @@
             </div>
           </div> 
         </form>
+        <div class="row has-text-centered">
+          <img id="imgLoading" src="loading.gif" alt="Loader">
+        </div>
+        <br>
+        <section class="images">
+        </section>
+        <br>
       </div>
  
   <script src="main.js"></script>
